# kotoba-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md  en2ja_smoke.toml  openai_realtime_en2ja.toml  partner_staging.toml.example
docs/: README.md  config-reference.md  extending.md  metrics.md  quickstart.md
examples/: README.md  async_concurrency.py  from_hf_dataset.py  quickstart.py
src/kotoba_benchmark/: __init__.py  _audio.py  _llm.py  _prompts.py  cli.py  config.py  pipeline.py  report.py
src/kotoba_benchmark/_vendored/: _align_manager.py  _align_prompt_builder.py  _chunk_timestamps.py  _eval_manager.py  _eval_prompt_builder.py  _gemini_transcribe.py
src/kotoba_benchmark/prompts/align/: en2es-v1.0.toml  en2ja-v1.2.toml  en2ja-v1.3.toml  en2ja-v1.4.toml  en2ja-v1.7.toml  en2ko-v1.0.toml  en2zh-v1.1.toml  en2zh-v1.2.toml  ja2en-v1.5.toml  ja2en-v1.6.toml  ja2en-v1.7.toml  ja2ko-v1.0.toml  ja2zh-v1.0.toml  ko2en-v1.0.toml  ko2ja-v1.0.toml  ko2zh-v1.0.toml  v1.0.toml  v1.1.toml  v1.2.toml  zh2en-v1.0.toml  zh2en-v1.1.toml  zh2ja-v1.0.toml  zh2ko-v1.0.toml
src/kotoba_benchmark/prompts/evaluate/: en2es-v1.0.toml  en2ja-v1.0.toml  en2ja-v1.1.toml  en2ko-v1.0.toml  en2zh-v1.0.toml  en2zh-v1.1.toml  ja2en-v1.0.toml  ja2en-v1.1.toml  ja2en-v1.2.toml  ja2en-v1.3.toml  ja2ko-v1.0.toml  ja2zh-v1.0.toml  ko2en-v1.0.toml  ko2ja-v1.0.toml  ko2zh-v1.0.toml  zh2en-v1.0.toml  zh2ja-v1.0.toml  zh2ko-v1.0.toml
src/kotoba_benchmark/stages/: align.py  score.py  transcribe.py
src/kotoba_benchmark/stages/translate/: __init__.py  _runner.py  kotoba_sdk.py  openai_realtime.py
