[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kotoba-benchmark"
version = "0.0.1"
description = "Speech-to-speech translation benchmark for Kotoba and other STS systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Kotoba Technologies" }]
keywords = ["kotoba", "benchmark", "speech-to-speech", "translation", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "kotoba-sdk>=0.1.0",
    "openai>=1.40",
    "google-genai>=1.0",
    "datasets[audio]>=3.0",
    "aiohttp>=3.9",
    "librosa>=0.10",
    "soundfile>=0.12",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "json-repair>=0.30",
    "more-itertools>=10.0",
    "filelock>=3.12",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
kotoba-benchmark = "kotoba_benchmark.cli:main"

[project.urls]
Homepage = "https://kotoba.tech"
Repository = "https://github.com/kotoba-tech/kotoba-benchmark"

[tool.hatch.build.targets.wheel]
packages = ["src/kotoba_benchmark"]

[tool.hatch.build.targets.wheel.force-include]
"src/kotoba_benchmark/prompts" = "kotoba_benchmark/prompts"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP"]
ignore = ["B905"]  # zip() strict= not required — parallel-length is enforced by upstream code

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/kotoba_benchmark/_vendored/*" = ["E", "W", "F", "B", "I", "UP"]
"src/kotoba_benchmark/report.py" = ["E501"]  # inline HTML template lines
